--- a/source/assets/scss/views/blog.scss
+++ b/source/assets/scss/views/blog.scss
@@ -9,28 +9,75 @@
 // @import '../modules/masonry';
 // @import '../modules/fonts-optional';
 
-// .headline-bold {
-//     font-weight: 500;
-// }
-// // Blocks
-// .featured-post { // dark image up top
-//     text-shadow: 1px 1px 3px black(0.5);
-//     a, a:hover {
-//         text-decoration: none;
-//     }
-//     .lead {
-//         color: white;
-//         @include breakpoint(medium down){font-size: 1rem;}
-//     }
-//     .pub-date {
-//         color: white(0.8);
-//     }
-//     .label {
-//         border: none; // rem-calc(1px) solid $color_white;
-//         background-color: black(0.7);
-//         color: $color_white;
-//     }
-// }
-// .post-sidebar {
-//
-// }
+body.blog {
+    background-color: $gray-11;
+}
+$bg-height: calc(8rem + 16vw);
+.featured-image {
+    background-color: $gray-4;
+    overflow: hidden;
+    width:    100%;
+    min-height: 450px; // fallback
+    min-height: $bg-height;
+    img {
+        width:  100%;
+        height: 100% !important;
+    }
+    .lozad {
+        @include blur(2vw);
+        transition: opacity 0.3s, filter 0.3s, -webkit-filter 0.3s, -moz-filter 0.3s, -o-filter 0.3s, -ms-filter 0.3s;
+        -webkit-transition-delay: 1s;
+        transition-delay:         1s;
+    }
+    .lozad.loaded {
+        @include blur(0);
+    }
+}
+.post-body {// pull up over image for desktop only
+    @include breakpoint (large) {
+        margin-top: -120px; // fallback
+        margin-top: calc(-4rem - 6vw);
+    }
+    #cta {
+        margin-bottom: 0;
+    }
+}
+
+.post-item { // featured blog post containers
+    padding-top: calc(3rem + 5vw);
+    .post-card { // contains post info, content varies
+        $pad: calc(1rem + 1.5vw);
+        margin-left: $pad;
+        margin-right: $pad;
+        padding: $pad;
+        .media-object { // overrides people in card
+            margin-bottom: 0;
+        }
+    }
+    &--medium {
+        padding: calc(1rem + 1vw);
+    }
+    &--small {
+        padding: 0.8rem;
+    }
+    &--large {
+        .featured-image {
+            height: 100%;
+        }
+        .post-card {
+            @include breakpoint (medium) {
+                max-width: 75%;
+            }
+            @include breakpoint (large) {
+                max-width: 66%;
+            }
+            @include breakpoint (xlarge) {
+                max-width: 50rem;
+            }
+        }
+    }
+}
+// hubspot disclaimer, I do not want thee
+.legal-consent-container {
+    display: none;
+}
