Split out blog detail and section view; now using CSS Grid for primary layout. Codepen: https://codepen.io/allanwhite/pen/ZqmwpQ

--- a/source/assets/scss/modules/type.scss
+++ b/source/assets/scss/modules/type.scss
@@ -516,9 +516,10 @@ ul.list-check {
 .read-more,
 .blog-date, .pub-date{
     text-transform: uppercase;
-    font-size: rem-calc(12px);
+    font-size: rem-calc(14px);
     font-weight: $font-weight-bold;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.3rem;
+    letter-spacing: 0.1em;
 }
 .card-title{
     color: $color_deep;
