--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -2,7 +2,7 @@
 layout: company
 ogType: article
 sharer: true
-customCSS: "blog"
+customCSS: "blog-detail"
 customJS: "/public/js/article.js"
 ---
 ruby:
