--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -77,6 +77,8 @@ figcaption{
 }
 .img-cover {
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 .img-multiply {
     @include blend-multiply;
