--- a/source/assets/scss/modules/blog.scss
+++ b/source/assets/scss/modules/blog.scss
@@ -15,13 +15,17 @@ body.blog {
 .legal-consent-container { // hubspot disclaimer, I do not want thee
     display: none;
 }
+.post-meta { // group for tags, permalink, etc.
+    line-height: 1;
+}
 .post-permalink {
+    $speed: 300ms;
     // position: absolute;
     // bottom:   0;
     // right: 0;
     display: inline-block;
     // padding: 0.5rem;
-    transition: color $timing-default, opacity $timing-default;
+    transition: color $speed, opacity $speed;
     &[data-theme="light"] {
         color: white;
         opacity: 0.5;
@@ -32,7 +36,7 @@ body.blog {
     }
     &[data-theme="dark"] {
         color: black;
-        opacity: 0.5;
+        opacity: 0.3;
         &:hover {
             color: $color_blue;
             opacity: 1;
