--- a/source/blog/index.html.slim
+++ b/source/blog/index.html.slim
@@ -14,7 +14,7 @@ ruby:
   # today = time.inspect
   sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
   def permalink
-    '<svg class="icon-size--small" viewBox="0 0 37 32" width="37" height="32"><use xlink:href="/public/icons/util-icons-sprite.svg#icon-links"></use></svg>'
+    '<svg class="icon-size--small" viewBox="0 0 37 34" width="37" height="34"><use xlink:href="/public/icons/util-icons-sprite.svg#icon-links"></use></svg>'
   end
 scss:
 
@@ -32,121 +32,14 @@ section.featured-posts
               - if i <= 2 && post.has_key?("author")
                 .column.shrink
                   = partial("partials/snippets/person", :locals => { :p => post.author })
-              - if post.has_key?("tags")
-                .column.shrink.align-self-bottom
+              .post-meta.column.align-self-bottom.text-right class=(if i <= 2 then 'shrink' else '' end)
+                - if post.has_key?("tags")
                   div style="display: inline-block; margin: 0 1rem 0.3rem 0;"
                     - post["tags"][0...3].each do |tag|
                       span.label.info.round= tag["tag_full"]
-                  a.post-permalink data-theme="dark" href="/blog/#{post.slug}" title="Permalink"
-                    = permalink
+                a.post-permalink data-theme="dark" href="/blog/#{post.slug}" title="Permalink"
+                  = permalink
 
         - if post.has_key?("featured_image")
           .featured-image.z-stack-back
             img.lozad.img-cover src="#{post.featured_image.url}?fit=thumb&w=400&h=100&fm=jpg&q=5" data-srcset="#{post.featured_image.url}?fit=thumb&w=640&h=360&q=50 640w, #{post.featured_image.url}?fit=thumb&w=800&h=500&q=40 800w, #{post.featured_image.url}?fit=thumb&w=1600&h=800 1200w" /
-/section.featured-posts
-  - sorted_posts[0...3].each_with_index do | (id, post), i |
-    - case i
-    - when 0
-      - card_size = "large"
-      /- card_width = "large-8"
-      - headline = "headline-3"
-    - when 1
-      - card_size = "medium"
-      /- card_width = "large-8"
-      - headline = "headline-4"
-    - when 2
-      - card_size = "small"
-      /- card_width = "large-4"
-      - headline = "headline-5"
-    .post-item.relative class="post-item--#{card_size}"
-      - if post.has_key?("featured_image")
-        img.featured-image.lozad.img-cover.z-stack-back src="#{post.featured_image.url}?fit=thumb&w=400&h=100&fm=jpg&q=5" data-srcset="#{post.featured_image.url}?fit=thumb&w=640&h=360&q=50 640w, #{post.featured_image.url}?fit=thumb&w=800&h=500&q=40 800w, #{post.featured_image.url}?fit=thumb&w=1600&h=800 1200w" /
-      .post-card.pad.container-color--white
-        .subhead--spaced.headline-6
-          = post.pub_date.strftime('%B %-d, %Y')
-        h2 class = headline
-          a href="/blog/#{post.slug}" title="Read, #{post.title}" = post.title
-        - if post.has_key?("summary")
-          = Kramdown::Document.new(plain_text(post.summary)).to_html
-        - if i == 0
-          .row.collapse.align-justify.align-middle
-            - if post.has_key?("author")
-              .column.shrink
-                = partial("partials/snippets/person", :locals => { :p => post.author })
-            - if post.has_key?("tags")
-              .column.shrink
-                = inline_svg("small/icon-tag", class: "icon-inline svg-color--gray-5")
-                | &nbsp;
-                - post["tags"].each do |tag|
-                  span.label.info.round= tag["tag_full"]
-
-        /= partial("partials/content/tags", :locals => { :p => post })
-/section#blogPost.row.collapse.align-center style="opacity: 1;"
-  .columns.small-12.large-8
-    article.post-body.blur-0.container-color--white.pad--xl.group--2x.drop
-      header
-        .subhead--spaced.headline-6
-          = partial "/partials/snippets/pubdate", :locals => p
-        h1.headline-3.headline-bold = p.title
-        - if p["author"].has_key?("profile_pic")
-          = partial("partials/snippets/person", :locals => { :p => p["author"] })
-      = partial "/partials/snippets/share", :locals => { :p => p, :classes => "show-for-xlarge vertical" }
-      - if p.has_key?("blog_lead")
-        #postLead.lead= Kramdown::Document.new(p["blog_lead"]).to_html
-      .content-dynamic.group
-        - if p.has_key?("featured_person")
-          = partial("partials/snippets/person-vertical-simple", :locals => { :p => p["featured_person"], :classes => "float-right-on-medium" })
-        = Kramdown::Document.new(p["post"]).to_html
-        / hr.divider
-      .row.row--gutter-small.align-justify.align-middle
-        - if p.has_key?("tags")
-          .columns.shrink
-            = inline_svg("small/icon-tag", class: "icon-inline svg-color--gray-5")
-            = partial "/partials/content/tags", :locals => p
-        .columns.shrink.text-right
-          = partial "/partials/snippets/share", :locals => { :p => p, :classes => "" }
-      - if p.has_key?("cta_ref")
-        = partial("/partials/content/cta", :locals => { :p => p["cta_ref"] })
-    aside#nextPrev.row.small-up-1.medium-up-2.group
-      .column
-        - previous_item = get_previous_item(data.site.blog, p, "pub_date")
-        - if previous_item != nil
-          p.blog-date Earlier
-          h4.headline-5
-            a href="/blog/#{previous_item["slug"]}/" rel="prev" title=("Read this post") = previous_item["title"]
-          - if previous_item.has_key?("summary")
-            .text-smaller
-              = Kramdown::Document.new(previous_item["summary"]).to_html
-      .column
-        - next_item = get_next_item(data.site.blog, p, "pub_date")
-        - if next_item != nil
-          p.blog-date Next Post
-          h4.headline-5
-            a href="/blog/#{next_item["slug"]}/" rel="next" title=("Read this post") = next_item["title"]
-          - if next_item.has_key?("summary")
-            .text-smaller
-              = Kramdown::Document.new(next_item["summary"]).to_html
-
-  aside.post-sidebar.columns.small-12.large-4 style="margin-top: 1rem; opacity: 1;" data-sticky-container=""
-    .sticky data-options=("topAnchor: 525; stickyOn: xlarge; marginTop: 3;") data-btm-anchor="cta" data-sticky=""
-      .pad--lg
-        .group
-          = partial "blog/partials/blog-subscription-simple", :locals => { :color => "gray" }
-        div
-          - if p.has_key?("discovery_topic") && p["discovery_topic"].has_key?("_meta")
-            - topic = data.site.discover[p.discovery_topic.id]
-            = partial "partials/cards/discover-lite", :locals => { :topic => topic, :classes => "group" }
-            - if topic.slug == "ehr-integrations"
-              = partial("/partials/content/cta", :locals => { :p => data.site.cta["1h6f0OBRqiiayM2cy28qey"] })
-          - if p.has_key?("related_entries") && p["related_entries"].count == 1
-            - p["related_entries"].take(1).each do | relatedPost |
-              = partial "partials/cards/featured-blog", :locals => { :post => relatedPost, :style => "light", :size => "small" }
-/- if p.has_key?("related_entries") && p["related_entries"].count > 1
-  section.section-article--med.container-gray-10
-    h4.headline-5.text--spaced.text-center.group Related
-    .row.full-width.small-up-1.medium-up-2.large-up-3.xlarge-up-4.align-center
-      - p["related_entries"][0...4].each do | relatedPost |
-        .column.group
-          = partial "partials/cards/featured-blog", :locals => { :post => relatedPost, :style => "light", :size => "small" }
-
-/.lozad.container-image--fill data-background-image="#{post.featured_image.url}?w=1800&h=400"
