--- a/source/blog/index.html.slim
+++ b/source/blog/index.html.slim
@@ -13,16 +13,12 @@ ruby:
   current_page.data.date = today.strftime('%B %-d, %Y')
   # today = time.inspect
   sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
-  def permalink
-    '<svg class="icon-size--small" viewBox="0 0 37 34" width="37" height="34"><use xlink:href="/public/icons/util-icons-sprite.svg#icon-links"></use></svg>'
-  end
-scss:
 
 section.featured-posts
   .grid-wrapper
     - sorted_posts[0...5].each_with_index do | (id, post), i |
-      .item.relative class="item-#{i}"
-        .post-card.z-stack-0.container-color--white
+      .item.drop-hover.relative class="item-#{i}"
+        .post-card.z-stack-0.bg-white
           .pub-date = post.pub_date.strftime('%B %-d, %Y')
           h2.headline-4
             a href="/blog/#{post.slug}" title="Read, #{post.title}" = post.title
@@ -30,16 +26,56 @@ section.featured-posts
             = Kramdown::Document.new(plain_text(post.summary)).to_html
             .row.collapse.align-justify.align-middle.show-for-medium
               - if i <= 2 && post.has_key?("author")
-                .column.shrink
+                .post-author.column.shrink
                   = partial("partials/snippets/person", :locals => { :p => post.author })
               .post-meta.column.align-self-bottom.text-right class=(if i <= 2 then 'shrink' else '' end)
                 - if post.has_key?("tags")
-                  div style="display: inline-block; margin: 0 1rem 0.3rem 0;"
+                  .post-tags.text-tiny.text-bold
+                    /= icon_tag
                     - post["tags"][0...3].each do |tag|
                       span.label.info.round= tag["tag_full"]
                 a.post-permalink data-theme="dark" href="/blog/#{post.slug}" title="Permalink"
-                  = permalink
+                  = icon_permalink
 
         - if post.has_key?("featured_image")
           .featured-image.z-stack-back
-            img.lozad.img-cover src="#{post.featured_image.url}?fit=thumb&w=400&h=100&fm=jpg&q=5" data-srcset="#{post.featured_image.url}?fit=thumb&w=640&h=360&q=50 640w, #{post.featured_image.url}?fit=thumb&w=800&h=500&q=40 800w, #{post.featured_image.url}?fit=thumb&w=1600&h=800 1200w" /
+            - if i == 0
+              img.lozad.img-cover src="#{post.featured_image.url}?fit=thumb&w=400&h=100&fm=jpg&q=5" data-srcset="#{post.featured_image.url}?fit=thumb&w=640&h=360&q=50 640w, #{post.featured_image.url}?fit=thumb&w=800&h=500&q=40 800w, #{post.featured_image.url}?fit=thumb&w=1600&h=800 1200w" /
+            - else
+              img.lozad.img-cover src="#{post.featured_image.url}?fit=thumb&w=400&h=100&fm=jpg&q=5" data-srcset="#{post.featured_image.url}?fit=thumb&w=640&h=360&q=50 640w, #{post.featured_image.url}?fit=thumb&w=1000&h=600&q=40 1000w" /
+
+section#blog-archives-1.section-article
+  .row.align-spaced.align-middle.full-width
+    .columns.small-12.large-8.xlarge-6
+      - sorted_posts[5...8].each do | id, post |
+        = partial "partials/cards/blog-card-horiz", :locals => { :post => post, :size => "large", :classes => "drop-hover bg-white group--2x" }
+    aside.columns.small-12.large-4.xlarge-3
+      = partial "blog/partials/blog-subscription", :locals => { :color => "dark" }
+
+section#blog-featured.section-article.container-gray-4
+  - featured_posts = data.site.collections.to_a.select { | id, collection | (id == "6u8cxfSJyg2eEAG0YCW2a6") }
+  - featured_posts.each do | id, posts |
+    .text-center.group
+      h2.headline-3 = posts.title
+    .row.full-width.small-up-1.medium-up-2.xxlarge-up-3.align-center
+      - posts["related_entries"].each do | entry |
+        - post = data.site.blog[entry.id]
+        .column
+          = partial "partials/cards/blog-card-horiz", :locals => { :post => post, :size => "large", :classes => "drop-hover bg-white group" }
+          /= partial "partials/cards/featured-blog", :locals => { :post => post, :style => "light", :size => "large" } 
+section#blog-archives-2.section-article
+  .row.align-spaced.align-middle.full-width
+    .columns.small-12.large-8.xlarge-6.large-order-2
+      - sorted_posts[8...15].each do | id, post |
+        = partial "partials/cards/blog-card-horiz", :locals => { :post => post, :size => "large", :classes => "drop-hover bg-white group--2x" }
+    aside.columns.small-12.large-4.xlarge-3.large-order-1
+      - sorted_webinars = data.site.webinars.to_a.sort_by{ |id, webinars| webinars['event_date'] }.reverse!
+      - sorted_webinars.take(1).each do | id, webinar_entry |
+        .column
+          = partial "partials/cards/webinar-poster", :locals => { :entry => webinar_entry }
+section#blog-archives.section-article.text-center
+  h3.headline-4.spaced-out.group Go further
+  .menu.button-group.align-center
+    = partial "partials/snippets/button", :locals => { :label => "Browse the blog archives", :url => "/blog/archives/", :button_classes => "button", :icon => "icon-files", :icon_align => "left" }
+    = partial "partials/snippets/button", :locals => { :label => "Get posts in your inbox", :url => "#blog-archives-1", :button_classes => "button success", :icon => "icon-email-open-sm", :icon_align => "left" }
+
